syntax = "proto3";

package betting;

// Esta línea DEBE COINCIDIR con tu 'go mod init'
option go_package = "github.com/Dario-M-Sinani/apuestas/proto";

import "google/protobuf/timestamp.proto";

// El servicio principal de apuestas
service BettingService {
  // RPC Unaria: Rápida, para aceptar la apuesta.
  // Recibe una apuesta y la encola para ser procesada.
  rpc PlaceBet(PlaceBetRequest) returns (PlaceBetResponse);

  // RPC Server-Streaming: Para transmitir datos en vivo.
  // Un cliente se suscribe a las cuotas de un evento.
  rpc GetEventOdds(EventOddsRequest) returns (stream EventOddsResponse);
}

// --- Mensajes para PlaceBet ---

message PlaceBetRequest {
  string user_id = 1;
  string event_id = 2;
  double amount = 3;
  string outcome_prediction = 4; // Ej: "team_a_wins"
}

message PlaceBetResponse {
  string bet_id = 1;
  string status = 2; // Ej: "PENDING_ACCEPTANCE", "REJECTED_INSUFFICIENT_FUNDS"
  google.protobuf.Timestamp placed_at = 3;
}

// --- Mensajes para GetEventOdds ---

message EventOddsRequest {
  string event_id = 1;
}

message EventOddsResponse {
  string event_id = 1;
  string outcome = 2;
  double odds = 3;
  google.protobuf.Timestamp last_updated = 4;
}